Drop 1.12-1.18.2 support, java 17